--- a/menu.html
+++ b/menu.html
@@ -1,1 +1,84 @@
-<h1>We are trying to hack your phone</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fear Animation - Hacking Simulation</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: #000;
+            color: #fff;
+            overflow: hidden;
+        }
+
+        .container {
+            text-align: center;
+            animation: shake 0.3s infinite;
+        }
+
+        h1 {
+            font-size: 3rem;
+            color: red;
+            text-shadow: 0 0 20px red, 0 0 30px red;
+            animation: flicker 2s infinite;
+        }
+
+        p {
+            font-size: 1.5rem;
+            margin-top: 20px;
+            color: white;
+            opacity: 0;
+            animation: fadeIn 4s ease-in forwards;
+            animation-delay: 2s;
+        }
+
+        @keyframes shake {
+            0% { transform: translate(1px, 1px) rotate(0deg); }
+            10% { transform: translate(-1px, -2px) rotate(-1deg); }
+            20% { transform: translate(-3px, 0px) rotate(1deg); }
+            30% { transform: translate(3px, 2px) rotate(0deg); }
+            40% { transform: translate(1px, -1px) rotate(1deg); }
+            50% { transform: translate(-1px, 2px) rotate(-1deg); }
+            60% { transform: translate(-3px, 1px) rotate(0deg); }
+            70% { transform: translate(3px, 1px) rotate(-1deg); }
+            80% { transform: translate(-1px, -1px) rotate(1deg); }
+            90% { transform: translate(1px, 2px) rotate(0deg); }
+            100% { transform: translate(1px, -2px) rotate(-1deg); }
+        }
+
+        @keyframes flicker {
+            0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+                opacity: 1;
+            }
+            20%, 24%, 55% {
+                opacity: 0;
+            }
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>We Are Trying to Hack Your Phone</h1>
+        <p>Your data might be at risk. Disconnect now.</p>
+    </div>
+    <script>
+        setTimeout(() => {
+            const audio = new Audio("https://www.soundjay.com/button/beep-07.wav");
+            audio.loop = true;
+            audio.play();
+        }, 2000);
+    </script>
+</body>
+</html>
