--- a/29.html
+++ b/29.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -73,9 +73,15 @@
       color: #333;
     }
 
+    /* Your Selected Cards (Green Border) */
     .card.selected {
-      background-color: #aaffaa;
-      border-color: #77dd77;
+      border: 3px solid #4caf50; /* Green border */
+      background-color: #e8f5e9; /* Light green background */
+    }
+
+    /* Partner's Selected Cards (Red Blur Shadow) */
+    .card.partner-selected {
+      box-shadow: 0 0 15px 5px rgba(255, 0, 0, 0.5); /* Red blur shadow */
     }
 
     /* Card Corner Indices */
@@ -138,6 +144,7 @@
     Partner's Selected Cards: <span id="partner-cards"></span>
   </div>
 
+  <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
   <script>
     // Define the 29 Card Game deck (32 cards with Black and Red suits)
     const suits = [
@@ -163,8 +170,51 @@
     let selectedCards = [];
     let partnerSelectedCards = [];
 
-    // Create a Broadcast Channel
-    const channel = new BroadcastChannel('29-card-game-channel');
+    // PeerJS setup
+    let peer;
+    let conn;
+
+    // Generate a random peer ID
+    const peerId = Math.random().toString(36).substring(2, 8);
+    const partnerId = prompt("Enter your partner's Peer ID:");
+
+    // Initialize PeerJS
+    peer = new Peer(peerId, {
+      host: '0.peerjs.com',
+      port: 443,
+      path: '/',
+      debug: 3,
+    });
+
+    peer.on('open', (id) => {
+      console.log('My Peer ID:', id);
+      if (partnerId) {
+        conn = peer.connect(partnerId);
+        setupConnection(conn);
+      }
+    });
+
+    peer.on('connection', (connection) => {
+      conn = connection;
+      setupConnection(conn);
+    });
+
+    function setupConnection(connection) {
+      conn.on('data', (data) => {
+        partnerSelectedCards = data;
+        updateDisplay();
+
+        // Add red blur shadow to partner's selected cards
+        const cardElements = document.querySelectorAll('.card');
+        cardElements.forEach(cardElement => {
+          if (partnerSelectedCards.some(card => cardElement.textContent.includes(card.name))) {
+            cardElement.classList.add('partner-selected');
+          } else {
+            cardElement.classList.remove('partner-selected');
+          }
+        });
+      });
+    }
 
     // Render cards
     cards.forEach(card => {
@@ -197,8 +247,10 @@
         cardElement.classList.add('selected');
         updateDisplay();
 
-        // Send selected card to the other tab
-        channel.postMessage({ type: 'card-selected', card });
+        // Send selected cards to the partner
+        if (conn) {
+          conn.send(selectedCards);
+        }
       }
     }
 
@@ -207,18 +259,6 @@
       yourCardsDisplay.textContent = selectedCards.map(card => card.name).join(', ');
       partnerCardsDisplay.textContent = partnerSelectedCards.map(card => card.name).join(', ');
     }
-
-    // Listen for messages from the other tab
-    channel.onmessage = (event) => {
-      const { type, card } = event.data;
-
-      if (type === 'card-selected') {
-        if (!partnerSelectedCards.includes(card)) {
-          partnerSelectedCards.push(card);
-          updateDisplay();
-        }
-      }
-    };
   </script>
 </body>
 </html>
