--- a/menu.html
+++ b/menu.html
@@ -99,10 +99,13 @@
                 padding: 8px;
             }
         }
+        .link{
+            color: white;
+        }
     </style>
 </head>
 <body>
-    <a href="https://hybridcivilbd.github.io/engineer/29.html">link</a>
+    <a class="link" href="https://hybridcivilbd.github.io/engineer/29.html">link</a>
     <div class="container">
         <!-- Card sections remain same as original -->
         <div class="card-list">
