--- a/300.html
+++ b/300.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>29 Card Game</title>
   <style>
-    /* General Styles */
     body {
       font-family: 'Arial', sans-serif;
       background: linear-gradient(135deg, #4a90e2, #6a5acd);
@@ -27,47 +26,35 @@
       text-align: center;
     }
 
-    p {
-      font-size: 1rem;
-      margin-bottom: 10px;
-      text-align: center;
-    }
-
-    /* Peer ID Section */
     .peer-id-section {
-      margin-bottom: 10px;
       text-align: center;
+      margin-bottom: 15px;
     }
 
-    .peer-id-section input {
+    .peer-id-section input, .peer-id-section button {
       padding: 8px;
-      font-size: 0.9rem;
-      border: 2px solid #4caf50;
-      border-radius: 5px;
-      margin-top: 8px;
-      width: 150px;
-      text-align: center;
-    }
-
-    .peer-id-section button {
-      padding: 8px 16px;
-      font-size: 0.9rem;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+      font-size: 1rem;
       margin-top: 8px;
     }
 
     #connect-button {
       background-color: #4caf50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
     }
 
     #connect-button.connected {
       background-color: #ff4d4d;
     }
 
-    /* Card Container */
+    .connection-status {
+      margin-top: 10px;
+      font-size: 1rem;
+      text-align: center;
+    }
+
     .card-container {
       display: flex;
       flex-wrap: wrap;
@@ -77,7 +64,6 @@
       margin: 0 auto;
     }
 
-    /* Card Styles */
     .card {
       width: 60px;
       height: 90px;
@@ -90,7 +76,6 @@
       align-items: center;
       cursor: pointer;
       font-size: 14px;
-      user-select: none;
       position: relative;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       transition: transform 0.2s, box-shadow 0.2s;
@@ -101,41 +86,32 @@
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
     }
 
-    .card.red {
-      color: #ff4d4d;
-    }
+    .card.red { color: #ff4d4d; }
+    .card.black { color: #333; }
 
-    .card.black {
-      color: #333;
-    }
-
-    /* Selected by You */
     .card.selected {
       border: 3px solid #4caf50;
       background-color: #e8f5e9;
     }
 
-    /* Partner Selected Tick */
-    .card .partner-tick {
+    .tick-mark {
       position: absolute;
       bottom: 4px;
       left: 4px;
-      font-size: 18px;
+      font-size: 16px;
       color: #4caf50;
+      font-weight: bold;
       display: none;
     }
 
-    .card.partner-selected .partner-tick {
+    .card.partner-selected .tick-mark {
       display: block;
     }
 
-    /* Responsive */
-    @media (min-width: 600px) {
-      .card {
-        width: 80px;
-        height: 120px;
-        font-size: 18px;
-      }
+    .selected-cards, .partner-selected-cards {
+      margin-top: 10px;
+      font-size: 0.9rem;
+      text-align: center;
     }
   </style>
 </head>
@@ -146,8 +122,17 @@
     <input type="text" id="partner-peer-id" placeholder="Enter Partner's Peer ID">
     <button onclick="toggleConnection()" id="connect-button">Connect</button>
   </div>
+  <div class="connection-status" id="connection-status">
+    Connection Status: <span id="status-text">Not Connected</span>
+  </div>
   <p>Select 8 Cards:</p>
   <div class="card-container" id="card-container"></div>
+  <div class="selected-cards" id="selected-cards">
+    Your Selected Cards: <span id="your-cards"></span>
+  </div>
+  <div class="partner-selected-cards" id="partner-selected-cards">
+    Partner's Selected Cards: <span id="partner-cards"></span>
+  </div>
 
   <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
   <script>
@@ -158,103 +143,106 @@
       { name: 'Clubs', symbol: '♣', color: 'black' },
     ];
     const ranks = ['7', '8', '9', '10', 'J', 'Q', 'K', 'A'];
-    const cards = suits.flatMap(suit => 
-      ranks.map(rank => ({
-        name: `${rank} of ${suit.name}`,
-        symbol: suit.symbol,
-        color: suit.color,
-        rank: rank,
-      }))
-    );
-
-    const cardContainer = document.getElementById('card-container');
-    const myPeerIdDisplay = document.getElementById('my-peer-id');
-    const partnerPeerIdInput = document.getElementById('partner-peer-id');
-    const connectButton = document.getElementById('connect-button');
+    const cards = suits.flatMap(suit => ranks.map(rank => ({
+      name: `${rank} of ${suit.name}`,
+      symbol: suit.symbol,
+      color: suit.color,
+      rank: rank,
+    })));
 
     let selectedCards = [];
     let partnerSelectedCards = [];
-    let peer, conn;
 
-    let savedPeerId = localStorage.getItem('peerId') || Math.random().toString(36).substring(2, 8);
-    localStorage.setItem('peerId', savedPeerId);
+    const cardContainer = document.getElementById('card-container');
+    const yourCardsDisplay = document.getElementById('your-cards');
+    const partnerCardsDisplay = document.getElementById('partner-cards');
+    const myPeerIdDisplay = document.getElementById('my-peer-id');
+    const partnerPeerIdInput = document.getElementById('partner-peer-id');
+    const connectButton = document.getElementById('connect-button');
+    const statusText = document.getElementById('status-text');
 
-    peer = new Peer(savedPeerId, { host: '0.peerjs.com', port: 443, path: '/' });
+    let peer = new Peer();
+    let conn;
 
-    peer.on('open', id => myPeerIdDisplay.textContent = id);
-    peer.on('connection', connection => setupConnection(connection));
+    peer.on('open', id => {
+      myPeerIdDisplay.textContent = id;
+    });
+
+    peer.on('connection', connection => {
+      conn = connection;
+      setupConnection();
+      updateConnectionStatus('Connected');
+    });
 
     function toggleConnection() {
-      if (conn) {
-        conn.close();
-        conn = null;
-        updateConnectionStatus('Disconnected');
+      if (connectButton.textContent === 'Connect') {
+        connectToPartner();
       } else {
-        const partnerId = partnerPeerIdInput.value.trim();
-        if (partnerId) {
-          conn = peer.connect(partnerId);
-          setupConnection(conn);
-        } else {
-          alert('Enter Partner ID');
-        }
+        disconnectFromPartner();
       }
     }
 
-    function setupConnection(connection) {
-      conn = connection;
+    function connectToPartner() {
+      const partnerId = partnerPeerIdInput.value.trim();
+      if (partnerId) {
+        conn = peer.connect(partnerId);
+        setupConnection();
+        updateConnectionStatus('Connecting...');
+      }
+    }
+
+    function disconnectFromPartner() {
+      if (conn) conn.close();
+      updateConnectionStatus('Disconnected');
+    }
+
+    function setupConnection() {
       conn.on('open', () => updateConnectionStatus('Connected'));
-      conn.on('data', data => handleIncomingData(data));
+
+      conn.on('data', data => {
+        if (data.type === 'card-selected') {
+          if (!partnerSelectedCards.includes(data.card)) {
+            partnerSelectedCards.push(data.card);
+            highlightPartnerCard(data.card);
+          }
+        } else if (data.type === 'card-deselected') {
+          partnerSelectedCards = partnerSelectedCards.filter(card => card !== data.card);
+          unhighlightPartnerCard(data.card);
+        }
+        updateDisplay();
+      });
+
       conn.on('close', () => updateConnectionStatus('Disconnected'));
     }
 
     function updateConnectionStatus(status) {
+      statusText.textContent = status;
       connectButton.textContent = status === 'Connected' ? 'Disconnect' : 'Connect';
       connectButton.classList.toggle('connected', status === 'Connected');
-    }
-
-    function handleIncomingData(data) {
-      if (data.type === 'card-selected') {
-        if (!partnerSelectedCards.includes(data.card)) {
-          partnerSelectedCards.push(data.card);
-          togglePartnerSelection(data.card, true);
-        }
-      } else if (data.type === 'card-deselected') {
-        partnerSelectedCards = partnerSelectedCards.filter(c => c !== data.card);
-        togglePartnerSelection(data.card, false);
-      }
     }
 
     cards.forEach(card => {
       const cardElement = document.createElement('div');
       cardElement.classList.add('card', card.color);
       cardElement.innerHTML = `
-        <div class="top-left">${card.rank} ${card.symbol}</div>
-        <div class="suit">${card.symbol}</div>
-        <div class="bottom-right">${card.rank} ${card.symbol}</div>
-        <div class="partner-tick">✔</div>
+        <div>${card.rank} ${card.symbol}</div>
+        <div class="tick-mark">✔️</div>
       `;
       cardElement.addEventListener('click', () => toggleCardSelection(card, cardElement));
       cardContainer.appendChild(cardElement);
     });
 
     function toggleCardSelection(card, cardElement) {
-      if (selectedCards.includes(card)) {
-        selectedCards = selectedCards.filter(c => c !== card);
+      if (selectedCards.includes(card.name)) {
+        selectedCards = selectedCards.filter(c => c !== card.name);
         cardElement.classList.remove('selected');
-        conn?.send({ type: 'card-deselected', card: card.name });
+        if (conn) conn.send({ type: 'card-deselected', card: card.name });
       } else if (selectedCards.length < 8) {
-        selectedCards.push(card);
+        selectedCards.push(card.name);
         cardElement.classList.add('selected');
-        conn?.send({ type: 'card-selected', card: card.name });
+        if (conn) conn.send({ type: 'card-selected', card: card.name });
       }
-    }
-
-    function togglePartnerSelection(cardName, selected) {
-      document.querySelectorAll('.card').forEach(card => {
-        if (card.textContent.includes(cardName)) {
-          card.classList.toggle('partner-selected', selected);
-        }
-      });
+      updateDisplay();
     }
   </script>
 </body>
