--- a/29.html
+++ b/29.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>29 Card Game</title>
   <style>
-    /* General Styles */
+    /* Your existing CSS remains unchanged */
     body {
       font-family: 'Arial', sans-serif;
       background: linear-gradient(135deg, #4a90e2, #6a5acd);
@@ -13,78 +13,91 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       min-height: 100vh;
       margin: 0;
-      padding: 20px;
+      padding: 10px;
       box-sizing: border-box;
     }
 
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
+      font-size: 1.8rem;
+      margin-bottom: 10px;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+      text-align: center;
     }
 
     p {
-      font-size: 1.2rem;
-      margin-bottom: 20px;
+      font-size: 1rem;
+      margin-bottom: 10px;
+      text-align: center;
     }
 
-    /* Peer ID Section */
     .peer-id-section {
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       text-align: center;
     }
 
     .peer-id-section input {
-      padding: 10px;
-      font-size: 1rem;
+      padding: 8px;
+      font-size: 0.9rem;
       border: 2px solid #4caf50;
       border-radius: 5px;
-      margin-top: 10px;
-      width: 200px;
+      margin-top: 8px;
+      width: 150px;
       text-align: center;
     }
 
     .peer-id-section button {
-      padding: 10px 20px;
-      font-size: 1rem;
-      background-color: #4caf50;
+      padding: 8px 16px;
+      font-size: 0.9rem;
       color: #fff;
       border: none;
       border-radius: 5px;
       cursor: pointer;
+      margin-top: 8px;
+    }
+
+    #connect-button {
+      background-color: #4caf50; /* Green */
+    }
+
+    #connect-button.connected {
+      background-color: #ff4d4d; /* Red */
+    }
+
+    .peer-id-section button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+
+    .connection-status {
       margin-top: 10px;
+      font-size: 1rem;
+      text-align: center;
     }
 
-    .peer-id-section button:hover {
-      background-color: #45a049;
-    }
-
-    /* Card Container */
     .card-container {
       display: flex;
       flex-wrap: wrap;
-      gap: 10px;
+      gap: 8px;
       justify-content: center;
-      max-width: 800px;
+      max-width: 100%;
       margin: 0 auto;
     }
 
-    /* Realistic Card Styles */
     .card {
-      width: 100px;
-      height: 150px;
+      width: 60px;
+      height: 90px;
       background-color: #fff;
       border: 1px solid #ddd;
-      border-radius: 10px;
+      border-radius: 8px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
       cursor: pointer;
-      font-size: 18px;
+      font-size: 14px;
       user-select: none;
       position: relative;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -104,21 +117,24 @@
       color: #333;
     }
 
-    /* Your Selected Cards (Green Border) */
     .card.selected {
       border: 3px solid #4caf50; /* Green border */
       background-color: #e8f5e9; /* Light green background */
     }
 
-    /* Partner's Selected Cards (Red Blur Shadow) */
-    .card.partner-selected {
-      box-shadow: 0 0 15px 5px rgba(255, 0, 0, 0.5); /* Red blur shadow */
+    .card.partner-selected::before {
+      content: '❌';
+      position: absolute;
+      top: -15px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 20px;
+      color: #ff4d4d;
     }
 
-    /* Card Corner Indices */
     .card .top-left, .card .bottom-right {
       position: absolute;
-      font-size: 16px;
+      font-size: 12px;
       font-weight: bold;
       display: flex;
       flex-direction: column;
@@ -126,30 +142,49 @@
     }
 
     .card .top-left {
-      top: 5px;
-      left: 5px;
+      top: 4px;
+      left: 4px;
     }
 
     .card .bottom-right {
-      bottom: 5px;
-      right: 5px;
+      bottom: 4px;
+      right: 4px;
       transform: rotate(180deg);
     }
 
-    /* Card Suit and Rank */
     .card .suit {
-      font-size: 40px;
+      font-size: 24px;
     }
 
-    /* Responsive Design */
-    @media (max-width: 600px) {
+    .selected-cards, .partner-selected-cards {
+      margin-top: 10px;
+      font-size: 0.9rem;
+      text-align: center;
+    }
+
+    @media (min-width: 600px) {
       h1 {
-        font-size: 2rem;
+        font-size: 2.5rem;
+      }
+
+      p {
+        font-size: 1.2rem;
+      }
+
+      .peer-id-section input {
+        width: 200px;
+        font-size: 1rem;
+      }
+
+      .peer-id-section button {
+        padding: 10px 20px;
+        font-size: 1rem;
       }
 
       .card {
         width: 80px;
         height: 120px;
+        font-size: 18px;
       }
 
       .card .suit {
@@ -157,7 +192,11 @@
       }
 
       .card .top-left, .card .bottom-right {
-        font-size: 14px;
+        font-size: 16px;
+      }
+
+      .selected-cards, .partner-selected-cards {
+        font-size: 1rem;
       }
     }
   </style>
@@ -167,7 +206,10 @@
   <div class="peer-id-section">
     <p>Your Peer ID: <strong id="my-peer-id"></strong></p>
     <input type="text" id="partner-peer-id" placeholder="Enter Partner's Peer ID">
-    <button onclick="connectToPartner()">Connect</button>
+    <button onclick="toggleConnection()" id="connect-button">Connect</button>
+  </div>
+  <div class="connection-status" id="connection-status">
+    Connection Status: <span id="status-text">Not Connected</span>
   </div>
   <p>Select 8 Cards:</p>
   <div class="card-container" id="card-container">
@@ -192,6 +234,7 @@
     const ranks = ['7', '8', '9', '10', 'J', 'Q', 'K', 'A'];
     const cards = suits.flatMap(suit => 
       ranks.map(rank => ({
+        id: `${rank}${suit.symbol}`, // Unique identifier
         name: `${rank} of ${suit.name}`,
         symbol: suit.symbol,
         color: suit.color,
@@ -204,19 +247,24 @@
     const partnerCardsDisplay = document.getElementById('partner-cards');
     const myPeerIdDisplay = document.getElementById('my-peer-id');
     const partnerPeerIdInput = document.getElementById('partner-peer-id');
+    const connectButton = document.getElementById('connect-button');
+    const statusText = document.getElementById('status-text');
 
-    let selectedCards = [];
-    let partnerSelectedCards = [];
-
-    // PeerJS setup
+    let selectedCards = []; // Your selected cards
+    let partnerSelectedCards = []; // Partner's selected cards
+    let cardElements = {}; // Map of card IDs to DOM elements
     let peer;
     let conn;
 
-    // Generate a random peer ID
-    const peerId = Math.random().toString(36).substring(2, 8);
+    // Load saved Peer ID from local storage
+    let savedPeerId = localStorage.getItem('peerId');
+    if (!savedPeerId) {
+      savedPeerId = Math.random().toString(36).substring(2, 8);
+      localStorage.setItem('peerId', savedPeerId);
+    }
 
     // Initialize PeerJS
-    peer = new Peer(peerId, {
+    peer = new Peer(savedPeerId, {
       host: '0.peerjs.com',
       port: 443,
       path: '/',
@@ -226,26 +274,77 @@
     peer.on('open', (id) => {
       console.log('My Peer ID:', id);
       myPeerIdDisplay.textContent = id;
+      renderCards();
     });
 
     peer.on('connection', (connection) => {
       conn = connection;
       setupConnection(conn);
+      updateConnectionStatus('Connected');
     });
+
+    peer.on('disconnected', () => {
+      updateConnectionStatus('Disconnected');
+    });
+
+    peer.on('close', () => {
+      updateConnectionStatus('Disconnected');
+    });
+
+    peer.on('error', (err) => {
+      console.error('PeerJS error:', err);
+      updateConnectionStatus('Error: ' + err.message);
+    });
+
+    function toggleConnection() {
+      if (connectButton.textContent === 'Connect') {
+        connectToPartner();
+      } else {
+        disconnectFromPartner();
+      }
+    }
 
     function connectToPartner() {
       const partnerId = partnerPeerIdInput.value.trim();
       if (partnerId) {
         conn = peer.connect(partnerId);
         setupConnection(conn);
+        updateConnectionStatus('Connecting...');
       } else {
         alert('Please enter your partner\'s Peer ID.');
       }
     }
 
+    function disconnectFromPartner() {
+      if (conn) {
+        conn.close();
+        conn = null;
+        partnerSelectedCards = [];
+        updateDisplay();
+        resetPartnerHighlights();
+      }
+      updateConnectionStatus('Disconnected');
+    }
+
     function setupConnection(connection) {
-      conn.on('data', (data) => {
-        if (data.type === 'card-selected') {
+      connection.on('open', () => {
+        updateConnectionStatus('Connected');
+        // Send your current selected cards to the partner
+        connection.send({ 
+          type: 'init-selection', 
+          cards: selectedCards.map(card => card.id) 
+        });
+      });
+
+      connection.on('data', (data) => {
+        if (data.type === 'init-selection') {
+          // Initialize partner's selected cards
+          partnerSelectedCards = data.cards.map(cardId => 
+            cards.find(card => card.id === cardId)?.name || cardId
+          );
+          updateDisplay();
+          highlightPartnerCards();
+        } else if (data.type === 'card-selected') {
           if (!partnerSelectedCards.includes(data.card)) {
             partnerSelectedCards.push(data.card);
             updateDisplay();
@@ -257,32 +356,58 @@
           unhighlightPartnerCard(data.card);
         }
       });
+
+      connection.on('close', () => {
+        updateConnectionStatus('Disconnected');
+        partnerSelectedCards = [];
+        updateDisplay();
+        resetPartnerHighlights();
+      });
     }
 
-    // Render cards
-    cards.forEach(card => {
-      const cardElement = document.createElement('div');
-      cardElement.classList.add('card', card.color);
-      cardElement.innerHTML = `
-        <div class="top-left">
-          <div>${card.rank}</div>
-          <div>${card.symbol}</div>
-        </div>
-        <div class="suit">${card.symbol}</div>
-        <div class="bottom-right">
-          <div>${card.rank}</div>
-          <div>${card.symbol}</div>
-        </div>
-      `;
-      cardElement.addEventListener('click', () => toggleCardSelection(card, cardElement));
-      cardContainer.appendChild(cardElement);
-    });
+    function updateConnectionStatus(status) {
+      statusText.textContent = status;
+      if (status === 'Connected') {
+        connectButton.textContent = 'Disconnect';
+        connectButton.classList.add('connected');
+      } else {
+        connectButton.textContent = 'Connect';
+        connectButton.classList.remove('connected');
+      }
+    }
+
+    // Render cards and store references
+    function renderCards() {
+      cardContainer.innerHTML = '';
+      cards.forEach(card => {
+        const cardElement = document.createElement('div');
+        cardElement.classList.add('card', card.color);
+        cardElement.dataset.cardId = card.id; // Unique identifier
+        cardElement.innerHTML = `
+          <div class="top-left">
+            <div>${card.rank}</div>
+            <div>${card.symbol}</div>
+          </div>
+          <div class="suit">${card.symbol}</div>
+          <div class="bottom-right">
+            <div>${card.rank}</div>
+            <div>${card.symbol}</div>
+          </div>
+        `;
+        cardElement.addEventListener('click', () => toggleCardSelection(card, cardElement));
+        cardContainer.appendChild(cardElement);
+        cardElements[card.id] = cardElement; // Store reference
+      });
+      // Apply initial selections (if any)
+      selectedCards.forEach(card => cardElements[card.id]?.classList.add('selected'));
+      highlightPartnerCards();
+    }
 
     // Toggle card selection
     function toggleCardSelection(card, cardElement) {
-      if (selectedCards.includes(card)) {
+      if (selectedCards.some(c => c.id === card.id)) {
         // Deselect the card
-        selectedCards = selectedCards.filter(selectedCard => selectedCard !== card);
+        selectedCards = selectedCards.filter(c => c.id !== card.id);
         cardElement.classList.remove('selected');
         if (conn) {
           conn.send({ type: 'card-deselected', card: card.name });
@@ -302,23 +427,37 @@
       updateDisplay();
     }
 
-    // Highlight partner's selected card
-    function highlightPartnerCard(cardName) {
-      const cardElements = document.querySelectorAll('.card');
-      cardElements.forEach(cardElement => {
-        if (cardElement.textContent.includes(cardName)) {
+    // Highlight all partner's selected cards
+    function highlightPartnerCards() {
+      Object.values(cardElements).forEach(cardElement => {
+        const cardId = cardElement.dataset.cardId;
+        const card = cards.find(c => c.id === cardId);
+        if (partnerSelectedCards.includes(card.name)) {
           cardElement.classList.add('partner-selected');
         }
       });
     }
 
-    // Unhighlight partner's deselected card
+    // Highlight a single partner's selected card
+    function highlightPartnerCard(cardName) {
+      const card = cards.find(c => c.name === cardName);
+      if (card && cardElements[card.id]) {
+        cardElements[card.id].classList.add('partner-selected');
+      }
+    }
+
+    // Unhighlight a single partner's deselected card
     function unhighlightPartnerCard(cardName) {
-      const cardElements = document.querySelectorAll('.card');
-      cardElements.forEach(cardElement => {
-        if (cardElement.textContent.includes(cardName)) {
-          cardElement.classList.remove('partner-selected');
-        }
+      const card = cards.find(c => c.name === cardName);
+      if (card && cardElements[card.id]) {
+        cardElements[card.id].classList.remove('partner-selected');
+      }
+    }
+
+    // Reset all partner highlights
+    function resetPartnerHighlights() {
+      Object.values(cardElements).forEach(cardElement => {
+        cardElement.classList.remove('partner-selected');
       });
     }
 
