--- a/employee.html
+++ b/employee.html
@@ -20,6 +20,7 @@
 
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     <script>
+        // Change this for each employee instance (e.g., emp-1001, emp-1002, emp-1003)
         const employeeId = 'emp-1001'; 
         const peer = new Peer(employeeId);
         let conn;
@@ -66,7 +67,7 @@
                 if (conn && conn.open) {
                     conn.send({ employeeId: employeeId, macId: macId, action: 'heartbeat' });
                 }
-            }, 4000); // Send heartbeat every 4 seconds (less than timeout)
+            }, 4000); // Send heartbeat every 4 seconds
         }
 
         function stopHeartbeat() {
@@ -76,7 +77,6 @@
             }
         }
 
-        // Stop heartbeat when page unloads
         window.onbeforeunload = () => {
             stopHeartbeat();
         };
