--- a/employee.html
+++ b/employee.html
@@ -66,6 +66,9 @@
             heartbeatInterval = setInterval(() => {
                 if (conn && conn.open) {
                     conn.send({ employeeId: employeeId, macId: macId, action: 'heartbeat' });
+                } else {
+                    stopHeartbeat();
+                    connectToOffice(); // Attempt to reconnect if connection is lost
                 }
             }, 4000); // Send heartbeat every 4 seconds
         }
